force-app/main/default/objects/Account_Plan_MS__c/Account_Plan_MS__c.object-meta.xml
<CustomObject>
    <label>Account Plan Market Share</label>
    <nameField>
        <displayFormat>APMS-{0000}</displayFormat>
        <label>Account Plan MS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plan Market Share</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>