force-app/main/default/objects/Account_Plan_MS__c/fields/Company_Share__c.field-meta.xml
<CustomField>
    <fullName>Company_Share__c</fullName>
    <formula>Company_Units__c /  Market_Units__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>