force-app/main/default/objects/Account_Plan_MS__c/fields/Dealer_Share__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Share__c</fullName>
    <formula>Dealer_Units__c /  Market_Units__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>