force-app/main/default/objects/Account_Plan_MS__c/fields/Dealer_Units__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Units__c</fullName>
    <label>Dealer Units</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>