force-app/main/default/objects/Account_Plan_MS__c/fields/Market_Units__c.field-meta.xml
<CustomField>
    <fullName>Market_Units__c</fullName>
    <label>Market Units</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>