force-app/main/default/objects/Account_Plan_MS__c/fields/Order_Field__c.field-meta.xml
<CustomField>
    <fullName>Order_Field__c</fullName>
    <label>Order Field</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>