force-app/main/default/objects/Account_Plan_MS__c/fields/Size_Category__c.field-meta.xml
<CustomField>
    <fullName>Size_Category__c</fullName>
    <label>Size Category</label>
    <length>50</length>
    <type>Text</type>
</CustomField>